# udos

./: .clang-format  .clang-tidy  .gitignore  AIPBF_plan.md  AIPBFv3.0_plan.md  AI_CONTEXT_PACKAGE.md  CMakeLists.txt  CODE_UNDERSTANDING.md  IMPLEMENTATION_INTELLIGENCE.md  LICENSE  PROJECT_BRAIN.md  README.md  REQUIREMENTS_TRACEABILITY.md  UADOS_plan.md  UADOSwalkthrough.md  conanfile.py  operational_runbook123.md  pyproject.toml  task123.md  walkthroughphase2_3_5.md
.github/workflows/: ci.yml  docs-sync.yml
AI_BRAIN/: AI_CONTEXT.md  AI_HANDOFF.md  MASTER_ARCHITECTURE.md  MASTER_COMPONENT_INDEX.md  MASTER_DECISIONS.md  MASTER_DEPENDENCIES.md  MASTER_KNOWLEDGE_GRAPH.md  MASTER_PROGRESS.md  MASTER_REQUIREMENTS.md  MASTER_RISKS.md  MASTER_ROADMAP.md  MASTER_SECURITY.md  MASTER_TESTING.md  MASTER_TEST_STATUS.md  MASTER_VALIDATION_STATUS.md  PROJECT_ARCHITECTURE.md  PROJECT_BRAIN.md  PROJECT_GAPS.md  PROJECT_SECURITY.md  PROJECT_STATUS.md  PROJECT_TESTING.md
configs/vehicle/: carla_simulation.yaml  (+1 more)
control/brake/: CMakeLists.txt
control/brake/tests/: CMakeLists.txt
control/loops/: CMakeLists.txt
control/loops/include/uados/control/: control_loop.hpp
control/loops/src/: control_loop.cpp
control/loops/tests/: CMakeLists.txt  test_control.cpp
control/steering/: CMakeLists.txt
control/steering/include/uados/control/: stanley_controller.hpp
control/steering/src/: stanley_controller.cpp
control/steering/tests/: CMakeLists.txt
control/throttle/: CMakeLists.txt
control/throttle/include/uados/control/: longitudinal_controller.hpp
control/throttle/src/: longitudinal_controller.cpp
control/throttle/tests/: CMakeLists.txt
control/transmission/: CMakeLists.txt
control/transmission/tests/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/include/uados/: component.hpp  logging.hpp  resource_profiler.hpp  types.hpp  version.hpp
core/common/src/: resource_profiler.cpp
core/common/tests/: CMakeLists.txt  test_hardening.cpp  test_types.cpp  test_version.cpp
core/event_bus/: CMakeLists.txt
core/event_bus/include/uados/event_bus/: event_bus.hpp  event_bus_factory.hpp
core/event_bus/src/: event_bus_impl.cpp
core/event_bus/tests/: CMakeLists.txt  test_event_bus.cpp
core/health/: CMakeLists.txt
core/health/include/uados/health/: health_monitor.hpp
core/health/src/: health_monitor_impl.cpp
core/health/tests/: CMakeLists.txt  test_health.cpp
core/kernel/: CMakeLists.txt
core/kernel/include/uados/kernel/: config_manager.hpp  kernel.hpp  memory_pool.hpp  spsc_queue.hpp
core/kernel/src/: config_manager_impl.cpp  kernel_impl.cpp
core/kernel/tests/: CMakeLists.txt  test_kernel.cpp  test_memory_pool.cpp  test_spsc_queue.cpp
core/lifecycle/: CMakeLists.txt
core/lifecycle/include/uados/lifecycle/: lifecycle_manager.hpp
core/lifecycle/src/: lifecycle_manager_impl.cpp
core/lifecycle/tests/: CMakeLists.txt  test_lifecycle.cpp
core/messaging/: CMakeLists.txt
core/messaging/tests/: CMakeLists.txt
core/plugin/: CMakeLists.txt
core/plugin/include/uados/plugin/: plugin.hpp
core/plugin/src/: plugin_system_impl.cpp
core/plugin/tests/: CMakeLists.txt
core/scheduler/: CMakeLists.txt
core/scheduler/include/uados/scheduler/: scheduler.hpp
core/scheduler/src/: scheduler_impl.cpp
core/scheduler/tests/: CMakeLists.txt  test_scheduler.cpp
digital_twin/sensor/: CMakeLists.txt
digital_twin/sensor/include/uados/digital_twin/: sensor_twin.hpp
digital_twin/sensor/src/: sensor_twin.cpp
digital_twin/vehicle/: CMakeLists.txt
digital_twin/vehicle/include/uados/digital_twin/: vehicle_twin.hpp
digital_twin/vehicle/src/: vehicle_twin.cpp
digital_twin/vehicle/tests/: CMakeLists.txt  test_digital_twin.cpp
fleet/ota/: CMakeLists.txt
fleet/ota/include/uados/fleet/: ota_manager.hpp
fleet/ota/src/: ota_manager.cpp
fleet/telemetry/: CMakeLists.txt
fleet/telemetry/include/uados/fleet/: fleet_telemetry.hpp
fleet/telemetry/src/: fleet_telemetry.cpp
fleet/telemetry/tests/: CMakeLists.txt  test_fleet.cpp
hal/api/: CMakeLists.txt
hal/api/include/uados/hal/: safety_envelope.hpp  vehicle_driver.hpp
hal/api/src/: safety_envelope.cpp
hal/sdk/: CMakeLists.txt
hal/validation/: CMakeLists.txt
hal/validation/include/uados/hal/: driver_validator.hpp
hal/validation/src/: driver_validator.cpp
hal/validation/tests/: CMakeLists.txt  test_driver_validation.cpp  test_safety_envelope.cpp
localization/gps_fusion/: CMakeLists.txt
localization/gps_fusion/tests/: CMakeLists.txt
localization/hdmap/: CMakeLists.txt
localization/hdmap/include/uados/localization/: hdmap_engine.hpp
localization/hdmap/src/: hdmap_engine.cpp
localization/hdmap/tests/: CMakeLists.txt
localization/pose/: CMakeLists.txt
localization/pose/include/uados/localization/: pose_estimator.hpp
localization/pose/src/: pose_estimator.cpp
localization/pose/tests/: CMakeLists.txt  test_localization.cpp
localization/slam/: CMakeLists.txt
localization/slam/include/uados/localization/: slam_engine.hpp
localization/slam/src/: slam_engine.cpp
localization/slam/tests/: CMakeLists.txt
localization/visual/: CMakeLists.txt
localization/visual/tests/: CMakeLists.txt
perception/detection/: CMakeLists.txt
perception/detection/include/uados/perception/: inference_engine.hpp  object_detector.hpp
perception/detection/src/: inference_engine.cpp  object_detector.cpp
perception/detection/tests/: CMakeLists.txt  test_perception.cpp
perception/lanes/: CMakeLists.txt
perception/lanes/include/uados/perception/: lane_detector.hpp
perception/lanes/src/: lane_detector.cpp
perception/tracking/: CMakeLists.txt
perception/tracking/include/uados/perception/: object_tracker.hpp
perception/tracking/src/: object_tracker.cpp
scripts/: generate-architecture-docs  generate-architecture-docs.bat  generate-code-understanding  generate-code-understanding.bat  generate-project-status  generate-project-status.bat  generate-test-reports  generate-test-reports.bat  install-project-brain  install-project-brain.bat  update-project-brain  update-project-brain.bat
(+112 files in other folders)
