[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "uados-tools"
version = "0.1.0"
description = "UADOS Python tooling, testing, and simulation scripts"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
readme = "README.md"

dependencies = [
    "numpy>=2.1",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "structlog>=24.0",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
ml = [
    "torch>=2.4",
    "onnx>=1.17",
    "onnxruntime>=1.19",
    "opencv-python>=4.10",
]
simulation = [
    "carla>=0.9.15",
    "open3d>=0.18",
]
dashboard = [
    "dash>=2.18",
    "plotly>=5.24",
    "flask>=3.0",
]
fleet = [
    "grpcio>=1.66",
    "grpcio-tools>=1.66",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "black>=24.0",
    "mypy>=1.11",
    "sphinx>=8.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=4.0",
]
all = [
    "uados-tools[ml,simulation,dashboard,fleet,dev]",
]

[project.scripts]
uados = "tools.cli.main:cli"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["tools", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["uados"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tools --cov-report=html --cov-report=term-missing -v"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "simulation: marks tests requiring CARLA simulator",
    "hardware: marks tests requiring physical hardware",
    "rc_car: marks tests for RC car platform",
]

[tool.coverage.run]
source = ["tools"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true
